SigmaCodebackup3rdSep/objects/Manufacturing_Run_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>Avg_Unit_Price__c</fullName>
        <label>Avg. Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Run__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Run</label>
        <referenceTo>Manufacturing_Run__c</referenceTo>
        <relationshipLabel>Manufacturing Run Allocations</relationshipLabel>
        <relationshipName>Manufacturing_Run_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Manufacturing Run Allocations</relationshipLabel>
        <relationshipName>Manufacturing_Run_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Via_Autopick__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Via Autopick</label>
        <type>Checkbox</type>
    </fields>
    <label>Manufacturing Run Allocation</label>
    <nameField>
        <displayFormat>MRA-{0000}</displayFormat>
        <label>Manufacturing Run Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manufacturing Run Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>